# rust-webapp

./: .gitignore  Cargo.toml  README.md  log4rs_tests.yaml
src/: app.rs  lib.rs  main.rs  users.rs
src/adapters/: memory.rs  mod.rs  mongo.rs  sqlite.rs
src/users/: mongo.rs  sqlite.rs
tests/: application.rs  common.rs
