[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
uuid = {version = "1.19.0", features = ["v4"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
utoipa = {version = "5.4.0", features = ["actix_extras"]}
log4rs = "1.4.0"
log = "0.4.29"
actix-cors = "0.7.1"
sqlite = "0.36.1"